--- a/build.gradle
+++ b/build.gradle
@@ -20,4 +20,6 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    systemProperty 'selenide.headless', System.getProperty('selenide.headless')
 }
+targetCompatibility = JavaVersion.VERSION_11
